tests/kyverno-policies/pod-resources/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-resources
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: pod-resources
    rule: pods-require-resources
    resources:
      - test/test-limits-skip
    kind: Pod
    result: skip
  - policy: pod-resources
    rule: pods-require-resources
    resources:
      - user-test/test-limits-pass
      - user-test/test-limits-with-init-pass
    kind: Pod
    result: pass
  - policy: pod-resources
    rule: pods-require-resources
    resources:
      - user-test/test-limits-memory-limits-fail
      - user-test/test-limits-with-init-memory-limits-fail
      - user-test/test-limits-cpu-limits-fail
      - user-test/test-limits-cpu-requests-missing
      - user-test/test-limits-memory-requests-fail
    kind: Pod
    result: fail
  - policy: pod-resources
    rule: pods-require-resources
    resources:
      - webservice/test-limits-pass-webservice
    kind: Pod
    result: pass
  - policy: pod-resources
    rule: pods-require-resources
    resources:
      - webservice/test-limits-memory-requests-fail-webservice
    kind: Pod
    result: fail
